# hpc-final-project

./: .gitignore  CMakeLists.txt  CMakeLists_multiple_nodes.txt  CMakeLists_single_node.txt  Makefile  README.md  config_environment.sh  hello_world_mpi.c  hello_world_sycl_mpi.cpp  main.cpp  main_gpu_to_gpu_1_node.cpp  main_gpu_to_gpu_2_nodes.cpp  scheduler.sh  scheduler_mpi.sh  scheduler_mpi_sycl.sh  scheduler_osu.sh  scheduler_sycl.sh  sycl_mpi_map_device.cpp
cuda_mpi/: cpu_to_gpu_cuda_mpi.cpp  gpu_to_gpu_cuda_mpi.cpp  gpu_to_gpu_cuda_nvlink.cpp  hello_world_cuda_mpi.c
gpu_to_gpu_single_node/: cpu_to_gpu_cuda.cpp  gpu_to_gpu_cuda_nvlink.cpp  gpu_to_gpu_cuda_nvlink_bidi.cpp  gpu_to_gpu_cuda_pcie.cpp  gpu_to_gpu_sycl_nvlink.cpp  gpu_to_gpu_sycl_nvlink_bidi.cpp  gpu_to_gpu_sycl_pcie.cpp
gpu_to_gpu_two_nodes/: gpu_to_gpu_cuda_mpi.cpp  gpu_to_gpu_sycl_mpi.cpp  test_mpi.cpp
report_lib/: experiment.cpp  experiment.h  experiment_args.h  experiment_runner.h  statistic.cpp  statistic.h  time_counter.cpp  time_counter.h  time_report.cpp  time_report.h
results/intranode-results/: 1024mb.txt  128mb.txt  2048mb.txt  256mb.txt  512mb.txt
scripts/: run-inter-node-experiments.sh  run-intra-node-experiments.sh  run-nccl-benchmarks.sh  run-osu-benchmarks.sh
src/gpu_to_gpu_single_node/: CMakeLists.txt  main_gpu_to_gpu_1_node.cpp
src/gpu_to_gpu_single_node/experiments/: cpu_to_gpu_cuda.cpp  gpu_to_gpu_cuda_nvlink.cpp  gpu_to_gpu_cuda_nvlink_bidi.cpp  gpu_to_gpu_cuda_pcie.cpp  gpu_to_gpu_sycl_nvlink.cpp  gpu_to_gpu_sycl_nvlink_bidi.cpp  gpu_to_gpu_sycl_pcie.cpp
src/gpu_to_gpu_two_nodes/: CMakeLists.txt  main_gpu_to_gpu_2_nodes.cpp
src/gpu_to_gpu_two_nodes/experiments/: gpu_to_gpu_cuda_mpi.cpp  gpu_to_gpu_sycl_mpi.cpp
src/report_lib/: experiment.hpp  experiment_runner.cpp  statistic.cpp  statistic.hpp  time_counter.cpp  time_report.cpp  time_report.hpp
src/utils/: data_validator.hpp
sycl_mpi/: cpu_to_gpu.cpp  gpu_to_gpu.cpp  gpu_to_gpu_single_node.cpp  hello_world_sycl_mpi.cpp
utils/: data_validator.hpp  device_query_sycl.cpp
